--- a/templates/ajax/help/roleplay_options.html.twig
+++ b/templates/ajax/help/roleplay_options.html.twig
@@ -10,14 +10,14 @@
 {{ 'Folgende Befehle können verwendet werden:'|trans({},'help')|raw }}
 </p>
 <ul>
-<li><i>{card}</i>: {{ 'Der Name einer zufällig gezogenen Karte (aus einem Spielset mit 54 Karten) wird angezeigt.'|trans({},'help')|raw }}</li>
-<li><i>{resident}</i>: {{ 'Der Name eines zufällig ausgewählten Einwohners deiner Stadt wird angezeigt (funktioniert nur, wenn du einer Stadt beigetreten bist).'|trans({},'help')|raw }}</li>
-<li><i>{ht}</i>: {{ 'Kopf oder Zahl.'|trans({},'help')|raw }}</li>
-<li><i>{rps}</i>: {{ 'Schere, Stein, Papier.'|trans({},'help')|raw }}</li>
-<li><i>{d6}</i>: {{ 'Ein 6-seitiger Würfel wird geworfen und das Ergebnis wird angezeigt (funktioniert mit d4, d6, d8, d10, d12, d20 und d100).'|trans({},'help')|raw }}</li>
-<li><i>{consonant}</i> : {{ 'einen Konsonanten zeichnen,'|trans({},'help')|raw }}</li>
-<li><i>{vowel}</i> : {{ 'einen Vokal zeichnen,'|trans({},'help')|raw }}</li>
-<li><i>{letter}</i> : {{ 'einen Brief zeichnen,'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'card'|trans({}, 'forum')}}}</i> : {{ 'Der Name einer zufällig gezogenen Karte (aus einem Spielset mit 54 Karten) wird angezeigt.'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'rnduser'|trans({}, 'forum')}}}</i> : {{ 'Der Name eines zufällig ausgewählten Einwohners deiner Stadt wird angezeigt (funktioniert nur, wenn du einer Stadt beigetreten bist).'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'coin'|trans({}, 'forum')}}}</i> : {{ 'Kopf oder Zahl.'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'rps'|trans({}, 'forum')}}}</i> : {{ 'Schere, Stein, Papier.'|trans({},'help')|raw }}</li>
+<li><i>{d6}</i> : {{ 'Ein 6-seitiger Würfel wird geworfen und das Ergebnis wird angezeigt (funktioniert mit d4, d6, d8, d10, d12, d20 und d100).'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'consonant'|trans({}, 'forum')}}}</i> : {{ 'einen Konsonanten zeichnen,'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'vowel'|trans({}, 'forum')}}}</i> : {{ 'einen Vokal zeichnen,'|trans({},'help')|raw }}</li>
+<li><i>&lbrace;{{'letter'|trans({}, 'forum')}}}</i> : {{ 'einen Brief zeichnen,'|trans({},'help')|raw }}</li>
 </ul>
 <p>
 {{ 'Du kannst dich ihrer bedienen, um neue (Foren-)Spiele zu erfinden oder bestimmte Entscheidungen nach dem Zufallsprinzip zu treffen. Gehe jedoch sparsam damit um!'|trans({},'help')|raw }}
