--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1668,3 +1668,8 @@ div.welcome-teaser {
   &.teaser-10 { background: url("../img/teaser10.jpg") no-repeat top right; }
   &.teaser-11 { background: url("../img/teaser11.jpg") no-repeat top right; }
 }
+
+span.tag {
+  font-size: 0.95rem; text-shadow: 1px 1px 0 black; padding: 2px 4px; box-shadow: 0 0 2px black; margin: 1px 2px;
+  border: 1px solid rgba(0,0,0,0.2); font-weight: bold; border-radius: 3px;
+}
