--- a/templates/ajax/admin/dash.html.twig
+++ b/templates/ajax/admin/dash.html.twig
@@ -41,21 +41,10 @@
                 <br />
                 {% if is_granted('ROLE_ELEVATED') %}
                     <h5>{{ 'Aktionen'|trans({},'admin') }}</h5>
-                    {% for action in actions %}
-                        <button x-ajax-href="{{ path('admin_action', {id: action.id}) }}">{{ action.name|trans({},'admin') }}</button>
+                    {% for id, action in actions %}
+                        <button x-ajax-href="{{ path('admin_action', {id: id}) }}">{{ action.name|trans({},'admin') }}</button>
                     {% endfor %}
                     {% if is_granted('ROLE_ADMIN') %}
-                        <h5>{{ 'Log'|trans({},'admin') }}</h5>
-                        <label><select id="log_select">
-                                {% for log in logs %}
-                                    <option value="{{ log }}" x-clear="{{ path('api_admin_clear_log', {'f': log}) }}" x-view="{{ path('admin_log', {'a': 'view', 'f': log}) }}" x-download="{{ path('admin_log', {'a': 'download', 'f': log}) }}">{{ log|replace({'::': '/'}) }}</option>
-                                {% endfor %}
-                            </select></label>
-                        <button class="a-log1">{{ 'Server-Log herunterladen'|trans({},'admin') }}</button>
-                        <button class="a-log2">{{ 'Server-Log ansehen'|trans({},'admin') }}</button>
-                        <button class="a-log3">{{ 'Server-Log löschen'|trans({},'admin') }}</button>
-
-                        <br /><br />
                         <h5>{{ 'Geplante Angriffe'|trans({},'admin') }}</h5><br />
                         {% for schedule in schedules %}
                             <div>
@@ -95,22 +84,5 @@
                 }, {'default': '{% trans from 'login' %}Login fehlgeschlagen. Bitte prüfe deine Eingaben.{% endtrans %}'} )
         });
         $.html.addEventListenerAll('.noa-teaser', 'click', function() { alert('{{ 'Computer sagt nein.'|trans({},'admin')|e('js') }}'); })
-        {% if is_granted('ROLE_ADMIN') %}
-        $.html.addEventListenerAll('.a-log1', 'click', function() {
-            const log = document.getElementById('log_select');
-            window.open( log.querySelector('option[value="' + log.value + '"]').getAttribute('x-download') );
-        });
-        $.html.addEventListenerAll('.a-log2', 'click', function() {
-            const log = document.getElementById('log_select');
-            window.open( log.querySelector('option[value="' + log.value + '"]').getAttribute('x-view') );
-        });
-        $.html.addEventListenerAll('.a-log3', 'click', function() {
-            const log = document.getElementById('log_select');
-            $.ajax.easySend( log.querySelector('option[value="' + log.value + '"]').getAttribute('x-clear'), {}, function () {
-                $.html.message('notice', 'OK.');
-                $.ajax.load(null,'{{ path('admin_dashboard') }}');
-            } );
-        })
-        {% endif %}
     </script>
 {% endblock %}
