--- a/assets/less/grid.less
+++ b/assets/less/grid.less
@@ -58,6 +58,7 @@
   &>.row.header, &>.row-flex.header {
     font-variant: small-caps; font-weight: bold;
     background: linear-gradient(to top, #643b25 0%, rgba(100, 59, 37, 0) 50%, rgba(100, 59, 37, 0) 100%);
+    &.row-flex { align-items: end }
   }
   &>.row:not(.header), &>.row-flex:not(.header) {
     &:not(.highlight) {
