--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -297,7 +297,7 @@ div.town-banner {
 .citizens-list,
 .messages-list,
 .routes-list{
-  .row.header {
+  .row.header, .row-flex.header {
     font-weight: bold;
     background: linear-gradient(to top, #643b25 0%, rgba(100, 59, 37, 0) 50%, rgba(100, 59, 37, 0) 100%);
     font-size: 1.2rem;
