--- a/templates/ajax/game/town/citizen_omniscience.html.twig
+++ b/templates/ajax/game/town/citizen_omniscience.html.twig
@@ -30,11 +30,14 @@
     </ul>
 
     <div class="row-table citizens-list">
-        <div class="row header">
+        <div class="row-flex header">
             <div class="padded cell rw-4 left rw-md-5">{{ 'Bürger'|trans({},'game') }}</div>
             <div class="padded cell rw-4 rw-md-2 center">{{ 'Truhe'|trans({},'game') }}</div>
             <div class="padded cell rw-2 rw-md-1 center">{{ 'Seele'|trans({},'soul') }}</div>
-            <div class="padded cell rw-2 center">{{ 'Aktivität'|trans({},'game') }}</div>
+            <div class="padded cell rw-2 center">
+                {{ 'Aktivität'|trans({},'game') }}<br />
+                {{ help_btn('Dieser Wert spiegelt die Anwesenheit und Aktivität eines jeden Bürgers wider.'|trans({},'game')) }}
+            </div>
         </div>
         {% for citizen in citizens|sort((a,b) => (a.infos.alive == b.infos.alive) ? ((a.infos.alive) ? a.infos.name|lower <=> b.infos.name|lower : b.infos.survivedDays <=> a.infos.survivedDays) : b.infos.alive <=> a.infos.alive) %}
             {% if citizen.infos.alive %}
