--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -210,7 +210,7 @@
     </div>
 
     <div class="row">
-        
+        <div class="padded cell rw-12 right"><a class="small" href="#" x-ajax-href="{{ path('town_house') }}">{{ 'Meine persönliche Nachricht ändern'|trans({},'game') }}</a></div>
     </div>
 
     <div class="cell padded center prof-list">
