--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -237,6 +237,8 @@
     &[x-a=survivalist] { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/book.gif") left 16px center no-repeat #3B3249; padding-left: 35px }
     &[x-a=hero]        { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/hero.gif") left 16px center no-repeat #3B3249; padding-left: 35px }
     &[x-a=dead]        { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/death.gif") left 16px center no-repeat #3B3249; padding-left: 35px }
+    &[x-a=shunned]     { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/icons/banished.gif") left 16px center no-repeat #3B3249; padding-left: 35px }
+
   }
 }
 
