--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -102,6 +102,7 @@
           &[x-a=survivalist] { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/book.gif") left 16px center no-repeat #36241b; padding-left: 35px }
           &[x-a=hero]        { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/hero.gif") left 16px center no-repeat #36241b; padding-left: 35px }
           &[x-a=dead]        { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/professions/death.gif") left 16px center no-repeat #36241b; padding-left: 35px }
+          &[x-a=shunned]     { background: url("../../img/icons/small_human.gif") left center no-repeat, url("../../img/icons/banished.gif") left 16px center no-repeat #36241b; padding-left: 35px }
         }
         div.dice-4   { background: url("../../img/forum/dice4.png")   left center no-repeat, #36241b }
         div.dice-6   { background: url("../../img/forum/dice6.png")   left center no-repeat, #36241b }
