--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -53,7 +53,7 @@
         div#gazette-deaths { font-size: 3vw; }
       }
       &#newspage-back {
-        width: 90%; margin-left: 0; transform: rotateY(-180deg); z-index: 1; opacity: 0;
+        width: 90%; margin-left: 0; transform: rotateY(-180deg); z-index: 1; opacity: 0; pointer-events: none;
         .nightstat { font-size: 3vw; }
         #buildingdetails { top: 55%; }
       }
@@ -63,7 +63,7 @@
   #gazette-switch:checked + #gazette {
     .newspage {
       transform: rotateY(-180deg);
-      &#newspage-front { opacity: 0; }
+      &#newspage-front { opacity: 0; pointer-events: none }
       &#newspage-back { transform: rotateY(-360deg); opacity: 1 }
     }
   }
