Added translation + help link for the roles

--- a/templates/ajax/game/game.html.twig
+++ b/templates/ajax/game/game.html.twig
@@ -127,7 +127,7 @@
             {% for role in roles %}
                 {# @var role \App\Entity\CitizenRole #}
                 {% if not role.hidden %}
-                    <li class="status">
+                    <li class="status{% if role.helpSection is not null %} link{% endif %}" {% if role.helpSection is not null %}x-ajax-href="{{ path('help', {'name': role.helpSection}) }}"{% endif %}>
                         <img src="{{ asset('build/images/roles/' ~ role.icon ~ '.gif') }}" alt="{{ role.label|trans({},'game') }}">
                         {% if role.name == 'ghoul' %}
                             <div class="ghoul-hunger-container hide-sm">
@@ -138,19 +138,22 @@
                             {% if hunger > 40 %}
                                 <div class="ghoul-message hide-sm"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
                             {% endif %}
-                            <div class="tooltip help">
-                                {{ (role.message ?? 'Du bist der {rolename} dieser Stadt.')|trans({'{rolename}': role.label|trans({}, 'game')}, 'game')}}
-                                <br />
-                                <div class="ghoul-hunger-container hide-md hide-lg hide-desktop">
-                                    <div class="ghoul-hunger-background"></div>
-                                    <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
-                                    <div class="ghoul-hunger-indicator" style="left: 40%"></div>
-                                </div>
-                                {% if hunger > 40 %}
-                                    <div class="ghoul-message hide-lg hide-desktop"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
-                                {% endif %}
-                            </div>
                         {% endif %}
+
+                        <div class="tooltip help">
+                            {{ (role.message ?? 'Du bist der {rolename} dieser Stadt.')|trans({'{rolename}': role.label|trans({}, 'game')}, 'game')}}
+                            {% if role.name == 'ghoul' %}
+                            <br />
+                            <div class="ghoul-hunger-container hide-md hide-lg hide-desktop">
+                                <div class="ghoul-hunger-background"></div>
+                                <div class="ghoul-hunger-bar {% if hunger > 40 %}warning{% endif %}" style="width: {{ min(100,hunger) }}%"></div>
+                                <div class="ghoul-hunger-indicator" style="left: 40%"></div>
+                            </div>
+                            {% if hunger > 40 %}
+                                <div class="ghoul-message hide-lg hide-desktop"><img src="{{ asset('build/images/icons/warning_anim.gif') }}" alt="/!\"> {{"Du wirst heute Nacht sterben!"|trans({}, 'game')}}</div>
+                            {% endif %}
+                            {% endif %}
+                        </div>
                     </li>
                 {% endif %}
             {% endfor %}
