--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -485,7 +485,7 @@
                         {% if not citizen_hidden %}
                             <button id="drop-all-button" {% if rucksack.items|length == 0 %}disabled{% endif %}>{% trans from 'game' %}Rucksack auf dem Boden ausleeren{% endtrans %}</button>
                         {% endif %}
-                        {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floor.items, 'hidden': citizen_hidden, show_banished_hidden: (banished or town_chaos)} %}
+                        {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floorItems, 'hidden': citizen_hidden, show_banished_hidden: (banished or town_chaos)} %}
                             {% block class %}desert{% endblock %}
                             {% block title %}{% trans from 'game' %}Am Boden{% endtrans %}{% endblock %}
                         {% endembed %}
@@ -653,12 +653,12 @@
 
                                 {% if other_citizen.escortSettings.allowInventoryAccess %}
                                     <div class="padded cell ro-4 rw-8">
-                                        {% embed "ajax/game/inventory.html.twig" with {'size': rucksack_sizes[other_citizen.id], 'items': other_citizen.inventory.items, 'escort': other_citizen.id, 'plus': allow_floor_access and floor.items is not empty, 'owner': other_citizen, 'sort': true} %}
+                                        {% embed "ajax/game/inventory.html.twig" with {'size': rucksack_sizes[other_citizen.id], 'items': other_citizen.inventory.items, 'escort': other_citizen.id, 'plus': allow_floor_access and floorItems is not empty, 'owner': other_citizen, 'sort': true} %}
                                             {% block class %}rucksack-escort{% endblock %}
                                         {% endembed %}
                                         {% if allow_floor_access %}
                                             <div class="tooltip-dummy hidden _lf _lf_{{ other_citizen.id }}">
-                                                {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floor.items, 'escort': other_citizen.id} %}
+                                                {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floorItems, 'escort': other_citizen.id} %}
                                                     {% block class %}desert-escort{% endblock %}
                                                 {% endembed %}
                                             </div>
