--- a/templates/ajax/game/beyond/ruin.html.twig
+++ b/templates/ajax/game/beyond/ruin.html.twig
@@ -107,7 +107,7 @@
                     {% block title %}{% trans from 'game' %}Rucksack{% endtrans %}{% endblock %}
                 {% endembed %}
                     <button id="drop-all-button" {% if rucksack.items|length == 0 %}disabled{% endif %}>{% trans from 'game' %}Rucksack auf dem Boden ausleeren{% endtrans %}</button>
-                    {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floor.items, 'hidden': false} %}
+                    {% embed "ajax/game/inventory.html.twig" with {'size': 0, 'items': floorItems, 'hidden': false} %}
                         {% block class %}desert{% endblock %}
                         {% block title %}{% trans from 'game' %}Am Boden{% endtrans %}{% endblock %}
                     {% endembed %}
