--- a/templates/scripts/errors/beyond.txt.twig
+++ b/templates/scripts/errors/beyond.txt.twig
@@ -13,3 +13,5 @@
 {{ constant('App\\Controller\\BeyondController::ErrorEscortFailureRuin') }}        : '{{'Du kannst das Gebäude nicht betreten, während du eskortiert wirst oder eine Eskorte leitest.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorTerrorized') }}           : '{{'Wenn du in der Wüste von Zombies umzingelst wirst, erstarrst du vor Angst und kannst nichts mehr unternehmen... Du musst Drogen oder etwas anderes finden, um <strong>deine Nerven zu beruhigen</strong> und aus dieser Hölle auszubrechen... Wenigstens ist es dir immer noch möglich, im Forum nach Hilfe zu suchen...'|trans({},'game')|e('js')}}',
 {{ constant('App\\Controller\\BeyondController::ErrorEscortActionRefused') }}  : '{{'Der Bürger weigert sich, dies zu tun...'|trans({},'game')|e('js')}}',
+{{ constant('App\\Controller\\BeyondController::ErrorEscortTerrorized') }}           : '{{'Solange dieser Bürger <strong>vor Angst erstarrt</strong> ist, wird es für ihn unmöglich sein, inmitten von Zombies zu handeln...'|trans({},'game')|e('js')}}',
+
