--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -425,6 +425,7 @@
                             {% if enter_costs_ap %}
                                 (<div class="ap">1</div>)
                             {% endif %}
+                            <div class="tooltip help">{{ 'Mit dieser Aktion kannst du die Stadt betreten, ohne dass es ins Stadtregister eingetragen wird. Wenn du ein paar Spieler eskortierst, werden diese am Stadttor zurückgelassen.'|trans({},'game') }}</div>
                         </button>
                     {% endif %}
                     <h5>{% trans from 'game' %}Meine Aktionen{% endtrans %}</h5>
@@ -621,7 +622,10 @@
                                         <div class="tooltip">{{ '{citizen} angreifen. Diese Aktion kostet dich {ap}.'|trans({'{citizen}': other_citizen.name,'{ap}': '<div class="ap">' ~ conf.get(constant('App\\Structures\\TownConf::CONF_MODIFIER_ATTACK_AP'),5) ~ '</div>'},'game')|raw }}</div>
                                     </button>
                                     {% if can_devour_citizen %}
-                                        <button {% if not allow_devour_citizen %}disabled{% endif %} x-devour-citizen="{{ path('beyond_desert_devour_citizen_controller', {cid: other_citizen.id}) }}" class="small inline"><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" style="margin-right: 0;" /></button>
+                                        <button {% if not allow_devour_citizen %}disabled{% endif %} x-devour-citizen="{{ path('beyond_desert_devour_citizen_controller', {cid: other_citizen.id}) }}" class="small inline">
+                                            <img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" style="margin-right: 0;" />
+                                            <div class="tooltip help">{{ 'Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.' }}</div>
+                                        </button>
                                     {% endif %}
                                     <button x-toggle-escort="0" x-escort-control-endpoint="{{ path('beyond_desert_escort_controller', {cid: other_citizen.id}) }}" class="small inline" ><img alt="" src="{{ asset('build/images/icons/escort_off.gif') }}" style="margin-right: 0;" />
                                         <div class="tooltip">{{ '{citizen} sagen mir nicht mehr zu folgen.'|trans({'{citizen}': other_citizen.name},'game') }}</div>
@@ -724,7 +728,7 @@
                                             <em>
                                                 {% if other_citizen != citizen %}
                                                     {{ 'Klicke hier, um seine Informationen anzuzeigen'|trans({}, 'game') }}
-                                                    {% else %}
+                                                {% else %}
                                                     {{ 'Ganz genau, das bist du!'|trans({}, 'game') }}
                                                 {% endif %}
                                             </em>
@@ -767,7 +771,10 @@
                                             <div class="tooltip">{{ '{citizen} angreifen. Diese Aktion kostet dich {ap}.'|trans({'{citizen}': other_citizen.name,'{ap}': '<div class="ap">' ~ conf.get(constant('App\\Structures\\TownConf::CONF_MODIFIER_ATTACK_AP'),5) ~ '</div>'},'game')|raw }}</div>
                                         </button>
                                         {% if can_devour_citizen %}
-                                            <button {% if not allow_devour_citizen or citizen_hidden %}disabled{% endif %} x-devour-citizen="{{ path('beyond_desert_devour_citizen_controller', {cid: other_citizen.id}) }}" class="small inline"><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" style="margin-right: 0;" /></button>
+                                            <button {% if not allow_devour_citizen or citizen_hidden %}disabled{% endif %} x-devour-citizen="{{ path('beyond_desert_devour_citizen_controller', {cid: other_citizen.id}) }}" class="small inline">
+                                                <img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" style="margin-right: 0;" />
+                                                <div class="tooltip help">{{ 'Als Ghul solltest du jeden Tag einen anderen Spieler auffressen.' }}</div>
+                                            </button>
                                         {% endif %}
                                         {% if other_citizen.escortSettings is not null and other_citizen.escortSettings.leader is null %}
                                             <button {% if not citizen.profession.heroic or citizen_hidden %}disabled{% else %}x-toggle-escort="1" x-escort-control-endpoint="{{ path('beyond_desert_escort_controller', {cid: other_citizen.id}) }}"{% endif%} class="small inline" ><img alt="" src="{{ asset('build/images/icons/escort_in.gif') }}" style="margin-right: 0;" />
@@ -1106,7 +1113,7 @@
 
         {% if can_devour_citizen and allow_devour_citizen %}
         $.html.addEventListenerAll('[x-devour-citizen]', 'click', function(e,elem) {
-            if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
+            if (!confirm('{{ 'Mit dieser Aktion kannst du deinen unersättlichen Hunger nach Menschenfleisch stillen!'|trans({},'game')|e('js') }}'))
                 return;
             $.ajax.easySend( elem.getAttribute('x-devour-citizen'), {},
                 function () {
