--- a/templates/ajax/game/town/door.html.twig
+++ b/templates/ajax/game/town/door.html.twig
@@ -123,7 +123,10 @@
                 </button>
             {% endif %}
             {% if show_sneaky %}
-                <button id="door_exit_sneak" {% if not town.door or not can_go_out %}disabled{% endif %}><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}">{% trans from 'game' %}Aus der Stadt schleichen{% endtrans %}</button>
+                <button id="door_exit_sneak" {% if not town.door or not can_go_out %}disabled{% endif %}><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}">
+                    {% trans from 'game' %}Aus der Stadt schleichen{% endtrans %}
+                    <div class="tooltip help">{{ 'Mit dieser Aktion kannst du die Stadt verlassen, ohne dass es ins Stadtregister eingetragen wird.'|trans({},'game') }}</div>
+                </button>
             {% endif %}
             <button id="door_exit" {% if not town.door or not can_go_out %}disabled{% endif %}><img alt="" src="{{ asset('build/images/icons/small_move.gif') }}" />{% trans from 'game' %}Stadt verlassen{% endtrans %}</button>
             <button x-ajax-href="{{ path('town_routes') }}"><img alt="" src="{{ asset('build/images/item/item_bagxl.gif') }}" />{{ 'Route planen...'|trans({},'game') }}</button>
